<resources>
    <string name="app_name">ManUtd Profile</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="hi_dharma">Hi Dharma!</string>
    <string name="welcome_to_manutd">Welcome to ManUtd</string>
    <string name="this_is_image">This is image</string>
    <string name="find_your_favorite_player_here">Find your favorite player here</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="detail_player">Detail Player</string>
    <string name="join_date">Join date:</string>
    <string name="birth_date">Birth date:</string>
    <string name="biography">Biography</string>
    <string name="my_name">Dharma Yudistira Eka Putra</string>
    <string name="my_email">A1311646@bangkit.academy</string>
    <string name="my_summary">Currently I am a 3 rd year Computer Science at State Polytechnic of Malang I have developed excellent problem solving skill through my degree, and I implement this skill through my competency in the field of android development My determination and dedication is highlighted by my achievements in competitions and national education programs I love writing code in Kotlin and Java programming languages and quite experienced using SCRUM in my project management With 3 years experience in the field of android development I am now looking to further develop and use my skills in a industry placement, specifically as an Android Developer</string>
    <string name="share">Share</string>
    <string name="share_message">Hey, here is my favorite manchester united: </string>
</resources>